@@ -82,3 +82,5 @@ Bug fixes:
 
 * bug 3607 fixed - Wrong values in Java configuration was causing the memory issues
 
+* bug 3630 fixed - functions added by 'addinter' are not visible by 'what'
+
